--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AndroidThings7inPiScreen</string>
     <string name="its_working_text">IT\'S WORKING - %1$d</string>
     <string name="click_me">Click Me</string>
+    <string name="clear">clear</string>
+    <string name="big_jump">Big Jump</string>
 </resources>
